spec/error_gcc.txt
Waf: Entering directory `/lib-core/build/linux'
[354/430] Compiling test/src/test_select_symbol_id_writer_layers.cpp
[355/430] Compiling test/src/test_select_type.cpp
../../test/src/test_select_type.cpp:31:71: error: type/value mismatch ‘template<class BaseType, class DefaultType> struct kodo_core::select_type’
     using select_fruit_type = kodo_core::select_type<fruit_type, apple>;
                                                                       ^
../../test/src/test_select_type.cpp:31:71: note:   expected a type, got ‘fruit_type’

In file included from ../../test/src/test_select_symbol_id_writer_layers.cpp:6:0:
/lib-core/src/lib_core/select_symbol_id_writer_layers.hpp:35:9: error: expected nested-name-specifier before ‘select_type2’
         select_type2<symbol_id_writer_layers, Default>::template
         ^

../../test/src/test_select_symbol_id_writer_layers.cpp:26:8: warning: extra ‘;’ [-Wpedantic]
     { };
        ^

Waf: Leaving directory `/home/mvp/dev/steinwurf/kodo-core/build/linux'
Build failed
 -> task in 'kodo_core_tests' failed (exit status 1):
	{task 140647608832400: cxx test_select_type.cpp -> test_select_type.cpp.1.o}
['/usr/bin/g++', '-O2', '-ftree-vectorize', '-finline-functions', '-pedantic', '-Wextra', '-Wall', '-std=c++11', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/src', '-I/home/mvp/dev/steinwurf/kodo-core/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/fifi-f85dcd/24.0.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/fifi-f85dcd/24.0.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/sak-2baed8/15.0.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/sak-2baed8/15.0.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/recycle-fa0f6e/2.0.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/recycle-fa0f6e/2.0.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/meta-808a5b/2.1.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/meta-808a5b/2.1.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/cpuid-a4173a/4.0.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/cpuid-a4173a/4.0.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/platform-e774c1/2.0.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/platform-e774c1/2.0.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/storage-a97dfa/2.0.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/storage-a97dfa/2.0.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/boost-6990ca/2.1.0', '-I/home/mvp/dev/steinwurf/bundle_dependencies/boost-6990ca/2.1.0', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/boost-6990ca/2.1.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/boost-6990ca/2.1.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/hex-4a4db2/3.0.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/hex-4a4db2/3.0.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/endian-10cf49/2.0.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/endian-10cf49/2.0.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/gtest-39e104/3.0.0/gtest/include', '-I/home/mvp/dev/steinwurf/bundle_dependencies/gtest-39e104/3.0.0/gtest/include', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/stub-5d6b38/4.0.1/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/stub-5d6b38/4.0.1/src', '-DBOOST_ALL_NO_LIB=1', '-DBOOST_DETAIL_NO_CONTAINER_FWD', '-DBOOST_SYSTEM_NO_DEPRECATED', '-DBOOST_NO_CXX11_NOEXCEPT', '../../test/src/test_select_type.cpp', '-c', '-o', '/home/mvp/dev/steinwurf/kodo-core/build/linux/test/src/test_select_type.cpp.1.o']
 -> task in 'kodo_core_tests' failed (exit status 1):
	{task 140647608832208: cxx test_select_symbol_id_writer_layers.cpp -> test_select_symbol_id_writer_layers.cpp.1.o}
['/usr/bin/g++', '-O2', '-ftree-vectorize', '-finline-functions', '-pedantic', '-Wextra', '-Wall', '-std=c++11', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/src', '-I/home/mvp/dev/steinwurf/kodo-core/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/fifi-f85dcd/24.0.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/fifi-f85dcd/24.0.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/sak-2baed8/15.0.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/sak-2baed8/15.0.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/recycle-fa0f6e/2.0.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/recycle-fa0f6e/2.0.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/meta-808a5b/2.1.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/meta-808a5b/2.1.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/cpuid-a4173a/4.0.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/cpuid-a4173a/4.0.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/platform-e774c1/2.0.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/platform-e774c1/2.0.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/storage-a97dfa/2.0.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/storage-a97dfa/2.0.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/boost-6990ca/2.1.0', '-I/home/mvp/dev/steinwurf/bundle_dependencies/boost-6990ca/2.1.0', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/boost-6990ca/2.1.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/boost-6990ca/2.1.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/hex-4a4db2/3.0.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/hex-4a4db2/3.0.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/endian-10cf49/2.0.0/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/endian-10cf49/2.0.0/src', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/gtest-39e104/3.0.0/gtest/include', '-I/home/mvp/dev/steinwurf/bundle_dependencies/gtest-39e104/3.0.0/gtest/include', '-I/home/mvp/dev/steinwurf/kodo-core/build/linux/__root__/home/mvp/dev/steinwurf/bundle_dependencies/stub-5d6b38/4.0.1/src', '-I/home/mvp/dev/steinwurf/bundle_dependencies/stub-5d6b38/4.0.1/src', '-DBOOST_ALL_NO_LIB=1', '-DBOOST_DETAIL_NO_CONTAINER_FWD', '-DBOOST_SYSTEM_NO_DEPRECATED', '-DBOOST_NO_CXX11_NOEXCEPT', '../../test/src/test_select_symbol_id_writer_layers.cpp', '-c', '-o', '/home/mvp/dev/steinwurf/kodo-core/build/linux/test/src/test_select_symbol_id_writer_layers.cpp.1.o']
